# octopus

./: .gitignore  CLAUDE.md  Dockerfile  MULTIUSER_DESIGN.md  OCTOPUS.md  README.md  agent.py  build.sh  cli.py  commands.py  config.py  constants.py  context.py  harness.md  logger.py  mcp.py  metrics.py  octopus.py  pyproject.toml  scheduler.py  session.py  skills.py  start.sh  statusline.py  tools.py  tui.py
.github/workflows/: ci.yml
.skills/: shell-script.md
doc/: knowledge_base.md
providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
server/: __init__.py  auth.py  database.py
server/models/: __init__.py  user.py
tests/: test_agent_hooks.py  test_agent_react.py  test_builtin_permissions.py  test_commands.py  test_config.py  test_config_safety.py  test_context.py  test_full_history.py  test_metrics.py  test_openai_provider.py  test_scheduler.py  test_security.py  test_session.py  test_skills.py  test_statusline.py  test_system_prompt_optimization.py  test_tools.py
tools/: __init__.py  agent_tools.py  bash.py  cgroup.py  exceptions.py  file_ops.py  git_tools.py  notebook.py  permissions.py  registry.py  sched_tools.py  schemas.py  security.py  state.py  web_tools.py
web/: agent_bridge.py  app.py  connection.py  events.py  pty_manager.py  routes_api.py  routes_auth.py  routes_kb.py  routes_pty.py  routes_ws.py
web/static/: app.js  app.v2.js  index.html  style.css
