[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopus-agent"
version = "2.0.0"
description = "AI Agent CLI — Anthropic SDK tool-use agent with Rich TUI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
octopus = "octopus:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
