[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopus-agent"
version = "2.0.0"
description = "AI Agent CLI — Anthropic SDK tool-use agent with Rich TUI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0", "pytest-cov>=4.0", "ruff>=0.5"]

[project.scripts]
octopus = "octopus:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line too long（部分长字符串不可避免）
    "B008",  # function call in default arg（dataclass 默认值）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

